Added new package script